--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 PORT=5000
 MONGO_URI=mongodb+srv://CHAIMCY1:8114@cluster0.waypb.mongodb.net/mydatabase?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET="8114"
+
+# const mongoURI = 'mongodb+srv://CHAIMCY1:8114@cluster0.waypb.mongodb.net/mydatabase?retryWrites=true&w=majority&appName=Cluster0';
+
+
